# Copyright 2020 Huawei Technologies Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ============================================================================

set(_proto_srcs
  "${METADEF_DIR}/proto/tensorflow/versions.proto"
  "${METADEF_DIR}/proto/tensorflow/resource_handle.proto"
  "${METADEF_DIR}/proto/tensorflow/tensor_shape.proto"
  "${METADEF_DIR}/proto/tensorflow/function.proto"
  "${METADEF_DIR}/proto/tensorflow/node_def.proto"
  "${METADEF_DIR}/proto/tensorflow/graph.proto"
  "${METADEF_DIR}/proto/tensorflow/tensor.proto"
  "${METADEF_DIR}/proto/tensorflow/attr_value.proto"
  "${METADEF_DIR}/proto/tensorflow/graph_library.proto"
  "${METADEF_DIR}/proto/tensorflow/types.proto"
  "${METADEF_DIR}/proto/tensorflow/op_def.proto"
)

protobuf_generate(opp _proto_cc _proto_h ${_proto_srcs})

# the list of source files
set(_tf_plugins
  abs_plugin.cc
  accumulate_nv2_plugin.cc
  acos_grad_plugin.cc
  acosh_plugin.cc
  acos_plugin.cc
  adam_apply_one_assign_plugin.cc
  adam_apply_one_with_decay_assign_plugin.cc
  add_n_plugin.cc
  add_plugin.cc
  add_v2_plugin.cc
  adjust_contrast_plugin.cc
  adjust_hue_plugin.cc
  adjust_saturation_plugin.cc
  adp_get_next.cc
  aicpu_parser.cc
  apply_adadelta_plugin.cc
  apply_adagrad_da_plugin.cc
  apply_adagrad_plugin.cc
  apply_adagradv2_plugin.cc
  apply_ada_max_plugin.cc
  apply_adam_plugin.cc
  apply_adam_with_amsgrad_plugin.cc
  apply_add_sign_plugin.cc
  apply_centered_rms_prop_plugin.cc
  apply_ftrl_plugin.cc
  apply_ftrl_v2_plugin.cc
  apply_gradient_descent_plugin.cc
  apply_keras_momentum_plugin.cc
  apply_momentum_plugin.cc
  apply_power_sign_plugin.cc
  apply_proximal_adagrad_plugin.cc
  apply_proximal_gradient_descent_plugin.cc
  apply_rms_prop_plugin.cc
  approximate_equal_plugin.cc
  arg_max_plugin.cc
  arg_min_plugin.cc
  ascend_antiquant_plugin.cc
  ascend_dequant_plugin.cc
  ascend_quant_plugin.cc
  ascend_weightquant_plugin.cc
  asin_grad_plugin.cc
  asinh_grad_plugin.cc
  asinh_plugin.cc
  asin_plugin.cc
  assert_plugin.cc
  assign_add_plugin.cc
  assign_plugin.cc
  assign_sub_plugin.cc
  atan2_plugin.cc
  atan_grad_plugin.cc
  atanh_plugin.cc
  atan_plugin.cc
  avg_pool3d.cc
  avg_pool_grad_plugin.cc
  avg_pool_plugin.cc
  avg_pool3d_grad_plugin.cc
  basic_lstm_cell_grad_plugin.cc
  basic_lstm_cell_plugin.cc
  batch_matmul_plugin.cc
  batch_multi_class_nms_plugin.cc
  batch_norm_grad_plugin.cc
  batch_norm_plugin.cc
  batch_to_space_nd_plugin.cc
  batch_to_space_plugin.cc
  besseli0e_plugin.cc
  besseli1e_plugin.cc
  bias_add_grad_plugin.cc
  bias_add_plugin.cc
  bitwise_and_plugin.cc
  bitwise_or_plugin.cc
  bitwise_xor_plugin.cc
  bincount_plugin.cc
  bn_infer_grad_plugin.cc
  bn_infer_plugin.cc
  bn_training_reduce_grad_plugin.cc
  bn_training_reduce_plugin.cc
  bn_training_update_grad_plugin.cc
  bn_training_update_plugin.cc
  bn_training_update_v2_plugin.cc
  broadcast_to_plugin.cc
  case_plugin.cc
  cast_plugin.cc
  ceil_plugin.cc
  centralization.cc
  clip_boxes_plugin.cc
  clip_by_value_plugin.cc
  concat_offset_plugin.cc
  concat_plugin.cc
  concat_v2_plugin.cc
  confusion_matrix_plugin.cc
  conv2d_backprop_filter.cc
  conv2d_backprop_input_cce.cc
  conv2d_plugin.cc
  conv3d_backprop_filter_plugin.cc
  conv3d_backprop_input_plugin.cc
  conv3d_plugin.cc
  cosh_plugin.cc
  cos_plugin.cc
  crop_and_resize_grad_boxes_plugin.cc
  crop_and_resize_grad_image_plugin.cc
  crop_and_resize_plugin.cc
  cumprod_plugin.cc
  cumsum_plugin.cc
  cumulative_logsumexp_plugin.cc
  data_format_dim_map_plugin.cc
  decode_bbox_plugin.cc
  decode_bbox_v2_plugin.cc
  depth_to_space_plugin.cc
  depthwise_conv2d_backprop_filter_plugin.cc
  depthwise_conv2d_backprop_input_plugin.cc
  depthwise_conv2d_forward_native_plugin.cc
  dequantize_plugin.cc
  diag_part_plugin.cc
  diag_plugin.cc
  div_no_nan_plugin.cc
  div_plugin.cc
  decode_jpeg_plugin.cc
  dense_image_warp_plugin.cc
  draw_bounding_boxes_plugin.cc
  drop_out_do_mask_plugin.cc
  drop_out_do_mask_v3_plugin.cc
  dynamic_get_next_plugin.cc
  dynamic_lstm_plugin.cc
  dynamic_plugin.cc
  dynamic_rnn_plugin.cc
  dynamic_rnn_tf_plugin.cc
  dynamic_rnn_grad_plugin.cc
  dynamic_gruv2_plugin.cc
  dynamic_gruv2_grad_plugin.cc
  dilation2d_plugin.cc
  dilation2d_backprop_filter_plugin.cc
  dilation2d_backprop_input_plugin.cc
  elu_grad_plugin.cc
  einsum_plugin.cc
  elu_plugin.cc
  equal_plugin.cc
  erfc_plugin.cc
  erf_plugin.cc
  euclidean_norm_plugin.cc
  expm1_plugin.cc
  exp_plugin.cc
  extract_glimpse_plugin.cc
  extract_image_patches_plugin.cc
  extract_volume_patches_plugin.cc
  fake_quant_with_min_max_args_gradient_plugin.cc
  fake_quant_with_min_max_args_plugin.cc
  fake_quant_with_min_max_vars_gradient_plugin.cc
  fake_quant_with_min_max_vars_per_channel_gradient_plugin.cc
  fake_quant_with_min_max_vars_per_channel_plugin.cc
  fake_quant_with_min_max_vars_plugin.cc
  fast_gelu_grad_plugin.cc
  fast_gelu_plugin.cc
  fastrcnn_predictions_plugin.cc
  fifo_queue_plugin.cc
  fill_plugin.cc
  floor_div_plugin.cc
  floor_mod_plugin.cc
  floor_plugin.cc
  for_plugin.cc
  gather_nd_plugin.cc
  gather_plugin.cc
  gather_v2_plugin.cc
  gelu_grad_plugin.cc
  gelu_plugin.cc
  getspan_plugin.cc
  greater_equal_plugin.cc
  greater_plugin.cc
  hash_table_plugin.cc
  hcom_all_gather_plugin.cc
  hcom_all_reduce_plugin.cc
  hcom_all_to_all_v_plugin.cc
  hcom_gather_all_to_all_v_plugin.cc
  hcom_reduce_plugin.cc
  hcom_broadcast_plugin.cc
  hcom_receive_plugin.cc
  hcom_reduce_scatter_plugin.cc
  hcom_remote_read_plugin.cc
  hcom_remote_write_plugin.cc
  hcom_remote_ref_read_plugin.cc
  hcom_remote_scatter_write_plugin.cc
  hcom_send_plugin.cc
  histogram_fixed_width_plugin.cc
  hvd_all_gather_plugin.cc
  hvd_all_reduce_plugin.cc
  hvd_broadcast_plugin.cc
  if_plugin.cc
  ifmr_plugin.cc
  inplace_add_plugin.cc
  inplace_sub_plugin.cc
  inplace_update_plugin.cc
  in_top_k_plugin.cc
  invert_permutation_plugin.cc
  invert_plugin.cc
  inv_grad_plugin.cc
  inv_plugin.cc
  l2_loss_plugin.cc
  lamb_apply_optimizer_assign_plugin.cc
  lamb_apply_weight_assign_plugin.cc
  lars_v2_plugin.cc
  layer_norm_grad_plugin.cc
  layer_norm_plugin.cc
  instance_norm_plugin.cc
  instance_norm_grad_plugin.cc
  leaky_relu_grad_plugin.cc
  leaky_relu_plugin.cc
  less_equal_plugin.cc
  less_plugin.cc
  list_plugin.cc
  lin_space_plugin.cc
  log1p_plugin.cc
  logical_and_plugin.cc
  logical_not_plugin.cc
  logical_or_plugin.cc
  log_plugin.cc
  log_softmax_grad_plugin.cc
  log_softmax_v2_plugin.cc
  lookup_table_find_plugin.cc
  lrn_grad_plugin.cc
  lrn_plugin.cc
  lru_cache_plugin.cc
  many_dynamic_plugin.cc
  mask_2_argmax_plugin.cc
  matmul_plugin.cc
  matrix_diag_d_plugin.cc
  matrix_diag_part_d_plugin.cc
  matrix_set_diag_d_plugin.cc
  maximum_grad_plugin.cc
  maximum_plugin.cc
  max_pool3d_grad_grad_plugin.cc
  max_pool3d_grad_plugin.cc
  max_pool3d_plugin.cc
  max_pool_ext2_plugin.cc
  max_pool_grad_grad_plugin.cc
  max_pool_grad_grad_with_argmax_plugin.cc
  max_pool_grad_plugin.cc
  max_pool_grad_with_argmax_plugin.cc
  max_pool_plugin.cc
  max_pool_with_argmax_plugin.cc
  minimum_grad_plugin.cc
  minimum_plugin.cc
  mirror_pad_plugin.cc
  mod_plugin.cc
  mul_no_nan_plugin.cc
  mul_plugin.cc
  multinomial_plugin.cc
  neg_plugin.cc
  non_max_suppression_plugin.cc
  non_max_suppressionv2_plugin.cc
  non_max_suppressionv3_plugin.cc
  non_max_suppressionv4_plugin.cc
  non_max_suppression_with_overlaps_plugin.cc
  normalize_bbox_plugin.cc
  not_equal_plugin.cc
  npu_alloc_floatstatus_plugin.cc
  npu_clear_floatstatus_plugin.cc
  npu_get_floatstatus_plugin.cc
  one_hot_plugin.cc
  ones_like_plugin.cc
  pack_plugin.cc
  pad_plugin.cc
  pad_v2_plugin.cc
  parallel_concat_plugin.cc
  decode_csv_plugin.cc
  partitioned_call_plugin.cc
  population_count_plugin.cc
  pow_plugin.cc
  prelu_grad_plugin.cc
  prelu_plugin.cc
  print_plugin.cc
  quantized_resize_bilinear_plugin.cc
  queue_close_plugin.cc
  queue_dequeue_many_plugin.cc
  queue_dequeue_plugin.cc
  queue_enqueue_many_plugin.cc
  queue_enqueue_plugin.cc
  queue_is_close_plugin.cc
  queue_size_plugin.cc
  random_shuffle_queue_plugin.cc
  random_uniform_plugin.cc
  range_plugin.cc
  real_div_plugin.cc
  reciprocal_grad_plugin.cc
  reciprocal_plugin.cc
  reduce_all_plugin.cc
  reduce_any_plugin.cc
  reduce_max_plugin.cc
  reduce_mean_plugin.cc
  reduce_min_plugin.cc
  reduce_prod_plugin.cc
  reduce_sum_plugin.cc
  relu6_grad_plugin.cc
  relu6_plugin.cc
  relu_grad_plugin.cc
  relu_plugin.cc
  resize_area_plugin.cc
  resize_bicubic_grad_plugin.cc
  resize_bicubic_plugin.cc
  resize_bilinear_grad_plugin.cc
  resize_bilinear_plugin.cc
  resize_nearest_neighbor_grad_plugin.cc
  resize_nearest_neighbor_plugin.cc
  reverse_v2_plugin.cc
  reverse_sequence_plugin.cc
  rint_plugin.cc
  roi_align_plugin.cc
  round_plugin.cc
  rpn_proposals_plugin.cc
  rsqrt_grad_plugin.cc
  rsqrt_plugin.cc
  scatter_add_plugin.cc
  scatter_div_plugin.cc
  scatter_elements_plugin.cc
  scatter_max_plugin.cc
  scatter_min_plugin.cc
  scatter_mul_plugin.cc
  scatter_nd_add_plugin.cc
  scatter_nd_plugin.cc
  scatter_nd_sub_plugin.cc
  scatter_nd_update_plugin.cc
  scatter_non_aliasing_add_plugin.cc
  scatter_sub_plugin.cc
  scatter_update_plugin.cc
  segment_max_plugin.cc
  select_plugin.cc
  select_plugin_v2.cc
  selu_plugin.cc
  sigmoid_grad_plugin.cc
  sigmoid_plugin.cc
  sign_plugin.cc
  single_plugin.cc
  sinh_plugin.cc
  sin_plugin.cc
  slice_plugin.cc
  softmax_cross_entropy_with_logits_plugin.cc
  softmax_grad_plugin.cc
  softmax_v2_plugin.cc
  softplus_grad_plugin.cc
  softplus_plugin.cc
  softsign_plugin.cc
  space_to_batch_nd_plugin.cc
  space_to_batch_plugin.cc
  space_to_depth_plugin.cc
  sparse_apply_adadelta.cc
  sparse_apply_adagrad_plugin.cc
  sparse_apply_adagrad_v2_plugin.cc
  sparse_apply_ftrl_plugin.cc
  sparse_apply_ftrl_v2_plugin.cc
  sparse_apply_proximal_adagrad_plugin.cc
  sparse_apply_rms_prop.cc
  sparse_softmax_cross_entropy_with_logits_plugin.cc
  sparse_tensor_dense_add_plugin.cc
  split_plugin.cc
  split_v_plugin.cc
  sqrt_grad_plugin.cc
  sqrt_plugin.cc
  squared_difference_plugin.cc
  square_plugin.cc
  stack_plugin.cc
  stack_pop_plugin.cc
  stack_push_plugin.cc
  strided_slice_assign_plugin.cc
  strided_slice_grad_plugin.cc
  strided_slice_plugin.cc
  sub_plugin.cc
  tanh_grad_plugin.cc
  tanh_plugin.cc
  tan_plugin.cc
  tensor_array_gather_plugin.cc
  tensor_array_grad_plugin.cc
  tensor_array_plugin.cc
  tensor_array_read_plugin.cc
  tensor_array_scatter_plugin.cc
  tensor_array_size_plugin.cc
  tensor_array_write_plugin.cc
  tensorflow_fusion_op_parser_util.cc
  tensor_scatter_add_plugin.cc
  tensor_scatter_sub_plugin.cc
  tensor_scatter_update_plugin.cc
  tile_plugin.cc
  to_absolute_bbox_plugin.cc
  top_k_plugin.cc
  transpose_plugin.cc
  truncate_div_plugin.cc
  truncate_mod_plugin.cc
  unpack_plugin.cc
  unsorted_segment_max_plugin.cc
  unsorted_segment_min_plugin.cc
  unsorted_segment_prod_plugin.cc
  unsorted_segment_sum_plugin.cc
  variable_shape_plugin.cc
  where_plugin.cc
  while_plugin.cc
  xdivy_plugin.cc
  xlogy_plugin.cc
  zeros_like_plugin.cc
  nonzero_plugin.cc
)

set(_tf_scope_fusion_passes
  ../tf_scope_fusion_passes/register_scope_fusion_passes.cc
  ../tf_scope_fusion_passes/scope_basic_lstm_cell_pass.cc
  ../tf_scope_fusion_passes/scope_batchmulticlass_nms_pass.cc
  ../tf_scope_fusion_passes/scope_clip_boxes_pass.cc
  ../tf_scope_fusion_passes/scope_decode_bbox_pass.cc
  ../tf_scope_fusion_passes/scope_decode_bbox_v2_pass.cc
  ../tf_scope_fusion_passes/scope_dynamic_lstm_pass.cc
  ../tf_scope_fusion_passes/scope_dynamic_rnn_pass.cc
  ../tf_scope_fusion_passes/scope_dynamic_gru_pass.cc
  ../tf_scope_fusion_passes/scope_fastrcnn_predictions_pass.cc
  ../tf_scope_fusion_passes/scope_layernorm_grad_pass.cc
  ../tf_scope_fusion_passes/scope_layernorm_pass.cc
  ../tf_scope_fusion_passes/scope_newbatchmulticlass_nms_pass.cc
  ../tf_scope_fusion_passes/scope_normalize_bbox_pass.cc
  ../tf_scope_fusion_passes/scope_preprocess_keep_ratio_resize_bilinear_pass.cc
  ../tf_scope_fusion_passes/scope_roi_align_pass.cc
  ../tf_scope_fusion_passes/scope_rpn_proposals_pass.cc
  ../tf_scope_fusion_passes/scope_to_absolute_bbox_pass.cc
  ../tf_scope_fusion_passes/scope_instancenorm_grad_pass.cc
  ../tf_scope_fusion_passes/scope_instancenorm_pass.cc
)

set(_ops_plugin_include
  ${OPS_INCLUDE}
  ${FWKACLLIB_INCLUDE}
  ${METADEF_DIR}
  ${METADEF_INCLUDE}
  ${METADEF_INCLUDE}/external
  ${METADEF_INCLUDE}/external/graph
  ${GRAPHENGINE_INCLUDE}/
  ${GRAPHENGINE_INCLUDE}/external
  ${PROTO_BINARY_DIR}/opp
  ${Protobuf_INCLUDE}
)

set(_ops_plugin_link_libs
  -Wl,--no-as-needed
  graph
  register
  alog
  error_manager
  te_fusion
  _caffe_parser
  ascend_protobuf
  -Wl,--as-needed
  c_sec
)

if(ENABLE_TEST STREQUAL "")
  add_library(ops_all_plugin SHARED
    ${_tf_plugins}
    ${_tf_scope_fusion_passes}
    ${_proto_h}
  )

  target_include_directories(ops_all_plugin PRIVATE
    ${_ops_plugin_include}
  )

  target_compile_options(ops_all_plugin PRIVATE
    "-fno-common"
    "-fno-strict-aliasing"
    -O2
    -Werror
    -Wno-deprecated-declarations
    -Dgoogle=ascend_private
  )

  target_link_libraries(ops_all_plugin PRIVATE
    $<BUILD_INTERFACE:intf_pub>
    $<$<NOT:$<BOOL:${BUILD_OPEN_PROJECT}>>:$<BUILD_INTERFACE:slog_headers>>
    ${_ops_plugin_link_libs}
  )

  if(BUILD_OPEN_PROJECT)
    set(TF_PLUGIN_PATH "${INSTALL_PATH}/opp/framework/built-in/tensorflow")
    cann_install(
      TARGET      ops_all_plugin
      FILES       $<TARGET_FILE:ops_all_plugin>
      DESTINATION "${TF_PLUGIN_PATH}"
    )
  else()
    install(
      TARGETS ops_all_plugin OPTIONAL
      EXPORT  ops_all_plugin-targets
      LIBRARY DESTINATION ${INSTALL_LIBRARY_DIR}
    )
  endif()
elseif(UT_TEST_ALL OR PLUGIN_UT)
  add_library(opsplugin_llt STATIC
    ${_tf_plugins}
    ${_tf_scope_fusion_passes}
    ${_proto_h}
    )
  target_include_directories(opsplugin_llt PUBLIC
    ${_ops_plugin_include}
    )
  if(NOT ${CMAKE_BUILD_MODE} STREQUAL "FALSE")
   set(compile_opt_mode ${CMAKE_BUILD_MODE})
  else()
   set(compile_opt_mode -O0)
  endif()
  target_compile_options(opsplugin_llt PUBLIC
    ${compile_opt_mode}
    -Dgoogle=ascend_private
    )
  target_link_libraries(opsplugin_llt
    PRIVATE
    $<BUILD_INTERFACE:intf_llt_pub>
    PUBLIC
    ${_ops_plugin_link_libs}
    )
endif()
